Fixed issue with screen jumping on the Search page when a user clicked the add to cart button or the compare checkbox if the user originall scrolled down the page.

--- a/CalOrdersJET/src/css/calorders.css
+++ b/CalOrdersJET/src/css/calorders.css
@@ -149,4 +149,9 @@
     font-size:20px;
 }
 
-
+.product-quantity {
+    padding-top: 5px;
+    padding-bottom: 5px; 
+    margin-right: 5px; 
+    text-indent: 5px;
+}
